--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -55237,3 +55237,351 @@ body {
   font-weight: 800 !important;
   width: 100% !important;
 }
+@supports (margin-bottom: env(safe-area-inset-bottom)) {
+  ._1tt196k {
+    margin-bottom: env(safe-area-inset-bottom) !important;
+    padding-left: env(safe-area-inset-left) !important;
+    padding-right: env(safe-area-inset-right) !important;
+  }
+}
+
+._1tt196k {
+    -webkit-box-align: center !important;
+    -ms-flex-align: center !important;
+    display: -webkit-box !important;
+    display: -moz-box !important;
+    display: -ms-flexbox !important;
+    display: -webkit-flex !important;
+    display: flex !important;
+    -webkit-align-items: center !important;
+    align-items: center !important;
+    border-top: 1px solid #EBEBEB !important;
+    position: fixed !important;
+    bottom: -60px !important;
+    height: 125px !important;
+    left: 0px !important;
+    right: 0px !important;
+    padding-bottom: 60px !important;
+    contain: paint !important;
+    background: #ffffff !important;
+    -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955),transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955), visibility 0.2s !important;
+    -moz-transition: transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955), visibility 0.2s !important;
+    transition: -ms-transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955),-webkit-transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955),transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955), visibility 0.2s !important;
+    z-index: 1 !important;
+}
+
+._h0klba {
+  -webkit-box-pack: center !important;
+  -ms-flex-pack: center !important;
+  -webkit-box-align: start !important;
+  -ms-flex-align: start !important;
+  -webkit-flex: 1 0 auto !important;
+  -ms-flex: 1 0 auto !important;
+  flex: 1 0 auto !important;
+  -webkit-align-items: flex-start !important;
+  align-items: flex-start !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-justify-content: center !important;
+  justify-content: center !important;
+  margin: 0 auto !important;
+  max-width: 560px !important;
+}
+
+._45o9ez {
+  -webkit-box-align: center !important;
+  -ms-flex-align: center !important;
+  -webkit-box-direction: normal !important;
+  -webkit-box-orient: vertical !important;
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+  -webkit-flex: 1 1 0 !important;
+  -ms-flex: 1 1 0 !important;
+  flex: 1 1 0 !important;
+  -webkit-flex-direction: column !important;
+  -ms-flex-direction: column !important;
+  flex-direction: column !important;
+  -webkit-align-items: center !important;
+  align-items: center !important;
+  cursor: pointer !important;
+  background-color: transparent !important;
+  text-align: center !important;
+  text-decoration: none !important;
+  border: 0px !important;
+  max-width: 20% !important;
+  min-width: 0px !important;
+  -webkit-tap-highlight-color: rgba(0,0,0,0) !important;
+  overflow-wrap: break-word !important;
+  -webkit-hyphens: auto !important;
+  -moz-hyphens: auto !important;
+  -ms-hyphens: auto !important;
+  hyphens: auto !important;
+  padding: 0 2px !important;
+}
+
+._jro6t0 {
+  display: -webkit-box !important;
+  display: -moz-box !important;
+  display: -ms-flexbox !important;
+  display: -webkit-flex !important;
+  display: flex !important;
+}
+
+@supports (overflow: clip) {
+  ._1yqbv3i {
+    overflow: clip !important;
+  }
+}
+
+._1yqbv3i {
+    font-size: 10px !important;
+    line-height: 12px !important;
+    overflow: hidden !important;
+    text-overflow: ellipsis !important;
+    display: -webkit-box !important;
+    -webkit-line-clamp: 2 !important;
+    -webkit-box-orient: vertical !important;
+    font-weight: 600 !important;
+    overflow-wrap: break-word !important;
+    color: #717171 !important;
+}
+
+._1ynbv25 {
+  display: block !important;
+}
+
+.dir.plmw1e5[class][class] {
+  margin-left: auto;
+  margin-right: auto;
+}
+.mq5rv0q[class][class] {
+  max-width: var(--gp-section-max-width,var(--maxWidth));
+}
+.plmw1e5[class][class] {
+  height: 100%;
+  width: 100%;
+}
+.dir.cffznj7[class][class] {
+  border: 1px solid var(--j-qkgmf);
+  border-radius: var(--i-g-gvoq);
+}
+.cffznj7[class][class] {
+  display: grid;
+  grid-template-columns: repeat(1,minmax(0,1fr));
+  grid-column-gap: 16px;
+  overflow: hidden;
+}
+.dir.c14nl487[class][class] {
+  padding: var(--ic-zlb-s);
+}
+.c14nl487[class][class] {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  grid-column: span 1;
+}
+.dir.i1porrk5[class][class] {
+  margin-top: var(--ic-zlb-s);
+  margin-bottom: var(--ic-zlb-s);
+}
+.dir.t1ip2k9k[class][class] {
+  margin-bottom: var(--fgg-f-l-a);
+  text-align: center;
+}
+.dir.svigw52[class][class] {
+  margin-bottom: var(--fgg-f-l-a);
+  text-align: center;
+}
+.dir.b13to4jp[class][class] {
+  margin-top: var(--jaa-ni-h);
+}
+.b13to4jp[class][class] {
+  width: 100%;
+}
+._wah8ne {
+  white-space: pre-line !important;
+  max-width: 100% !important;
+  font-size: var(--tl-font-size, 16px) !important;
+  font-weight: var(--tl-font-weight, MEDIUM) !important;
+  letter-spacing: var(--tl-letter-spacing, 0em) !important;
+  line-height: var(--tl-line-height, 20px) !important;
+  color: var(--tl-color, #000000) !important;
+  -webkit-line-clamp: var(--tl-line-clamp) !important;
+}
+._y9cbsa {
+  white-space: pre-line !important;
+  max-width: 100% !important;
+  font-size: var(--tl-font-size, 14px) !important;
+  font-weight: var(--tl-font-weight, 400) !important;
+  letter-spacing: var(--tl-letter-spacing, 0em) !important;
+  line-height: var(--tl-line-height, 18px) !important;
+  color: var(--tl-color, #222222) !important;
+  -webkit-line-clamp: var(--tl-line-clamp) !important;
+}
+
+@supports (--custom: properties) {
+  ._qqb2vcb {
+    background: var(--dls19-brand-gradient, linear-gradient(to right, #E61E4D 0%, #E31C5F 50%, #D70466 100%)) !important;
+  }
+}
+
+._qqb2vcb {
+    cursor: pointer !important;
+    display: inline-block !important;
+    margin: 0px !important;
+    position: relative !important;
+    text-align: center !important;
+    text-decoration: none !important;
+    touch-action: manipulation !important;
+    font-family: var(--e-ls-qkw) !important;
+    font-size: var(--iw-ehf-f) !important;
+    line-height: var(---s-l-myu) !important;
+    font-weight: var(--jx-zk-pv) !important;
+    border-radius: var(--go-h-jh-l) !important;
+    outline: none !important;
+    padding: 14px 24px !important;
+    transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s !important;
+    -webkit-tap-highlight-color: transparent !important;
+    border: none !important;
+    background: linear-gradient(to right, rgb(230, 30, 77) 0%, rgb(227, 28, 95) 50%, rgb(215, 4, 102) 100%) !important;
+    color: rgb(255, 255, 255) !important;
+    width: 100% !important;
+}
+
+.dir.tjxdvlu[class][class] {
+  left: 0;
+  right: 0;
+  border-radius: var(--go-h-jh-l);
+}
+.dir.tjxdvlu[class][class] {
+  left: 0;
+  right: 0;
+  border-radius: var(--go-h-jh-l);
+}
+.dir.tjxdvlu[class][class] {
+  left: 0;
+  right: 0;
+  border-radius: var(--go-h-jh-l);
+}
+.tjxdvlu[class][class] {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  -webkit-mask-image: -webkit-radial-gradient(white,black);
+  mask-image: -webkit-radial-gradient(white,black);
+}
+.tjxdvlu[class][class] {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  -webkit-mask-image: -webkit-radial-gradient(white,black);
+  mask-image: -webkit-radial-gradient(white,black);
+}
+.tjxdvlu[class][class] {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  -webkit-mask-image: -webkit-radial-gradient(white,black);
+  mask-image: -webkit-radial-gradient(white,black);
+}
+@supports (--custom:properties) {
+  .dir.t12u7nq4[class][class] {
+    background-image: var( --dls19-brand-gradient-radial,var(--d-e-vybb) );
+}  
+}
+
+.dir.t12u7nq4[class][class] {
+    background-size: 200% 200%;
+    transition: opacity 1.25s;
+    background-image: var(--d-e-vybb);
+}
+@supports (--custom:properties) {
+  .dir.t12u7nq4[class][class] {
+    background-image: var( --dls19-brand-gradient-radial,var(--d-e-vybb) );
+  }
+}
+
+.dir.t12u7nq4[class][class] {
+    background-size: 200% 200%;
+    transition: opacity 1.25s;
+    background-image: var(--d-e-vybb);
+}
+@supports (--custom:properties) {
+  .dir.t12u7nq4[class][class] {
+    background-image: var( --dls19-brand-gradient-radial,var(--d-e-vybb) );
+  }
+}
+
+.dir.t12u7nq4[class][class] {
+    background-size: 200% 200%;
+    transition: opacity 1.25s;
+    background-image: var(--d-e-vybb);
+}
+.t12u7nq4[class][class] {
+    display: block;
+    width: 100%;
+    height: 100%;
+    min-width: 200px;
+    opacity: 0;
+    background-image: linear-gradient(to right,black 0%,white 50%,black 100%);
+}
+.t12u7nq4[class][class] {
+    display: block;
+    width: 100%;
+    height: 100%;
+    min-width: 200px;
+    opacity: 0;
+    background-image: linear-gradient(to right,black 0%,white 50%,black 100%);
+}
+.t12u7nq4[class][class] {
+    display: block;
+    width: 100%;
+    height: 100%;
+    min-width: 200px;
+    opacity: 0;
+    background-image: linear-gradient(to right,black 0%,white 50%,black 100%);
+}
+.c4wd1yj[class][class] {
+  display: block;
+  position: relative;
+  pointer-events: none;
+}
+.c4wd1yj[class][class] {
+  display: block;
+  position: relative;
+  pointer-events: none;
+}
+.c4wd1yj[class][class] {
+  display: block;
+  position: relative;
+  pointer-events: none;
+}
+
+@supports (object-fit: cover) {
+  ._6tbg2q {
+    height: 100% !important;
+    width: 100% !important;
+  }
+}
+
+/* ._6tbg2q {
+  height: 0px !important;
+  width: 0px !important;
+  position: absolute !important;
+} */
