--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -56256,3 +56256,24 @@ body {
   background: var(--j-qkgmf) !important;
   color: var(--f-mkcy-f) !important;
 }
+._1qfgcw8 {
+  font-size: 22px !important;
+  line-height: 26px !important;
+  font-weight: 600 !important;
+  margin-bottom: 0;
+}
+@media (min-width: 744px) {
+  ._1qfgcw8 {
+    font-size: 22px !important;
+    line-height: 26px !important;
+  }
+}
+.payment__user-email {
+  display: inline-flex;
+  margin-top: 25px;
+  margin-bottom: 25px;
+}
+
+.payment__login-message {
+  margin-bottom: 15px;
+}
