--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -102,6 +102,9 @@
   }
 }
 @media (min-width: 1128px) {
+  .float-left-xl {
+    float: left;
+  }
   .block-xl {
     display: block !important;
   }
@@ -113,6 +116,9 @@
   }
   .flex-xl {
     display: flex !important;
+  }
+  .pr-3-xl {
+    padding-right: 12px;
   }
 }
 @media (min-width: 1440px) {
