fix resources header

--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4999,6 +4999,9 @@ select[disabled] {
 .rounded-full {
   border-radius: 50%;
 }
+.items-center {
+  align-items: center;
+}
 
 /*! ------------------- */
 /*! Footer              */
