--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -5002,6 +5002,9 @@ select[disabled] {
 .items-center {
   align-items: center;
 }
+.self-stretch {
+  align-self: stretch;
+}
 
 /*! ------------------- */
 /*! Footer              */
